--- a/styles/main.css
+++ b/styles/main.css
@@ -8,11 +8,18 @@ body {
 a {
 	color: grey;
 	text-decoration: none;
+	transition: all .3s ease-in-out;
 }
 
 a:hover {
 	color: #2dbf5b;
 }
+
+a:focus {
+	outline: 0;
+	text-decoration: none;
+	color: #673ab7;
+  }
 
 /*header*/
 
@@ -57,11 +64,14 @@ header {
 	margin-bottom: 50px;
 	padding: 10px 20px 10px 20px;
 	border-radius: 25px;
-    background-color: rgba(165, 42, 42, 0.527);
 }
 
 footer {
     background-color: #ffa600d2;
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	right: 0;
 }  
 
 footer ul li{
@@ -72,9 +82,9 @@ footer ul li{
 
 #logos {
     
-    padding: 1.5% 2%;
+    padding: 0.5% 2%;
 	width: 100%;
-	max-width: 50px;
+	max-width: 40px;
 }
 
 @media(max-width:720px){
