--- a/styles/main.css
+++ b/styles/main.css
@@ -59,6 +59,38 @@ nav a:focus {
 	border-radius: 25px;
 }
 
+
+/***** form *****/
+
+input[type=text], select, textarea {
+	width: 100%;
+	padding: 12px;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	box-sizing: border-box;
+	margin-top: 6px;
+	margin-bottom: 16px;
+	resize: vertical;
+  }
+
+input[type=submit] {
+  background-color: #04AA6D;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+	background-color: #2dbf5b;
+  }
+
+.form {
+	border-radius: 5px;
+	padding: 20px;
+  }
+
 /***** footer *****/
 
 footer {
